# hyper-trader-manager

./: .gitignore  AGENTS.md  DEV_SETUP.md  README.md  docker-compose.dev.yml  docker-compose.selfhosted.yml  docker-compose.yml  justfile
.opencode/: opencode.json
api/: .env.development  .env.example  .env.selfhosted.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.py  database.py  justfile  main.py  privy_implementation_arch.md  pyproject.toml  schema.sql
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 0001_baseline.py  0002_add_log_archives.py  0003_normalize_legacy_trader_configs.py
api/docker/: Dockerfile.api
api/docs/plans/: 2026-04-02-docker-swarm-secrets-design.md  2026-04-02-docker-swarm-secrets-plan.md
api/hyper_trader_api/: __init__.py  config.py  database.py  main.py
api/hyper_trader_api/db/: __init__.py  bootstrap.py
api/hyper_trader_api/middleware/: __init__.py  jwt_auth.py  session_auth.py
api/hyper_trader_api/models/: __init__.py  session_token.py  ssl_config.py  trader.py  trader_log_archive.py  user.py
api/hyper_trader_api/routers/: __init__.py  auth.py  images.py  ssl_setup.py  traders.py  updates.py
api/hyper_trader_api/runtime/: __init__.py  base.py  docker_runtime.py  factory.py
api/hyper_trader_api/schemas/: __init__.py  auth.py  image.py  ssl_setup.py  trader.py  trader_config.py  trader_log_archive.py  update.py
api/hyper_trader_api/services/: __init__.py  cert_generator.py  image_service.py  k8s_controller.py  local_auth_service.py  log_archive_service.py  privy_service.py  session_token_service.py  ssl_setup_service.py  token_service.py  trader_service.py  traefik_config.py  update_service.py
api/middleware/: __init__.py  api_key_auth.py  jwt_auth.py
api/models/: __init__.py  refresh_token.py  trader.py  user.py
api/routers/: __init__.py  admin.py  auth.py  traders.py
api/schemas/: __init__.py  auth.py  trader.py
api/scripts/: export_openapi.py
api/services/: __init__.py  auth_service.py  jwt_service.py  k8s_controller.py  trader_service.py
api/templates/: configmap.yaml.j2  secret.yaml.j2  statefulset.yaml.j2
api/tests/: README.md  __init__.py  conftest.py  test_alembic_bootstrap.py  test_auth.py  test_auth_service.py  test_cert_generator.py  test_config.py  test_docker_runtime.py  test_health.py  test_image_service.py  test_images_router.py  test_jwt_service.py  test_local_auth_service.py  test_log_archive_service.py  test_models.py  test_privy_auth.py  test_session_auth.py  test_session_token_service.py  test_ssl_repair.py  test_ssl_setup_router.py  test_ssl_setup_schemas.py  test_ssl_setup_service.py  test_token_service.py  test_trader_config_schema.py  test_trader_log_archive_schema.py  test_trader_log_archives_router.py  test_trader_service.py  test_traders.py  test_traders_router.py  test_traefik_config.py  test_update_checker.py  test_update_schemas.py  test_update_service.py  test_updates_router.py
api/utils/: __init__.py  crypto.py
api/workers/: __init__.py  reconciliation.py
(+265 files in other folders)
