[project]
name = "hyper-trader-api"
version = "0.2.5"
description = "HyperTrader Manager API - Multi-tenant trading bot management platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Andrei Nasui" }
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Database
    "sqlalchemy>=2.0.0",
    # Configuration & Validation
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # YAML parsing
    "pyyaml>=6.0.0",
    # Security & Auth
    "cryptography>=41.0.0",
    "passlib[bcrypt]>=1.7.4",
    # HTTP Client
    "httpx>=0.25.0",
    # File uploads
    "python-multipart>=0.0.6",
    # Docker
    "docker>=7.0.0",
    # Templating
    "jinja2>=3.1.0",
    "packaging>=26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
api = "uvicorn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hyper_trader_api"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["hyper_trader_api"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

# Disable strict checking for test files - they don't need type annotations
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Legacy modules still using old architecture - suppress errors
[[tool.mypy.overrides]]
module = "hyper_trader_api.services.k8s_controller"
ignore_errors = true

[[tool.mypy.overrides]]
module = "hyper_trader_api.services.privy_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "hyper_trader_api.workers.reconciliation"
ignore_errors = true

[[tool.mypy.overrides]]
module = "hyper_trader_api.runtime.docker_runtime"
ignore_errors = true

[[tool.mypy.overrides]]
module = "hyper_trader_api.runtime.factory"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.14.14",
]
